# Dynavest

./: .cursorignore  .env.example  .env.local.template  .eslintignore  .gitignore  README.md  deploy-standalone.sh  docker-compose.yml  env.example  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
contracts/dynavest_basic/: Cargo.toml  lib.rs
contracts/dynavest_simple/: Cargo.toml  lib.rs
contracts/dynavest_strategy/: Cargo.toml  lib.rs
contracts/strategy_manager/: Cargo.toml  README.md  build.sh  deploy.sh  lib.rs
contracts/strategy_manager/.cargo/: config.toml
contracts/test_simple/: Cargo.toml  lib.rs
dynavest-shuttle/: Cargo.toml
shuttle-backend/: Cargo.toml  README.md  SETUP_GUIDE.md  run_server.sh  test_connection.rs
shuttle-backend/src/: chat.rs  main.rs  rag_system.rs  sample_data.rs
src/__tests__/: integration-test.tsx  readme.test.tsx  shuttle-deployment.test.tsx
src/__tests__/integration/: end-to-end.test.tsx
src/__tests__/performance/: performance-optimization.test.tsx
src/__tests__/utils/: testHelpers.tsx
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/integration-test/: page.tsx
src/app/profile/: layout.tsx  page.tsx
src/app/strategies/: layout.tsx  page.tsx
src/classes/message/: base.ts  build-portfolio.ts  cross-chain-opportunities.ts  cross-chain-strategy.ts  deposit.ts  edit.ts  find-strategies.ts  index.ts  invest.ts  portfolio.ts  review-portfolio.ts  strategies-cards.ts  text.ts
src/classes/strategies/: baseStrategy.ts  index.ts  multiStrategy.ts
src/components/: AddressQRCode.tsx  BottomNav.tsx  ChainSelector.tsx  Header.tsx  RiskBadgeList.tsx  StructuredData.tsx  Tooltip.tsx
src/constants/: chains.ts  coins.ts  index.ts  profile.ts  risk.ts  strategies.ts
src/contexts/: AccountContext.tsx  ChatContext.tsx  PrivyAccountProvider.tsx
src/hooks/: useAccessibility.ts  useEnhancedChat.ts  useMobileFeatures.ts  usePerformance.ts  useStatusModal.ts
src/providers/: config.ts  index.tsx
src/services/: ContractService.ts  DynaVestService.ts  ShuttleService.ts
src/test/: setup.ts
src/types/: blockchain.ts  bot.ts  index.ts  message.ts  position.ts  strategies.ts
src/utils/: analytics.ts  chainlinkPrices.ts  chatStarters.ts  coins.ts  fee.ts  index.ts  naturalLanguage.ts  pie.ts  strategies.ts  strategyApi.ts  toast.ts
(+148 files in other folders)
